# maptoart

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONSUMERS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  create_map_poster.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  pr-checks.yml  publish.yml  release-manual.yml  requirements-check.yml
examples/: basic_python_usage.py
examples/config/: poster.yaml
scripts/: release.sh  sync_requirements.sh
src/maptoart/: __init__.py  _util.py  batch.py  cli.py  core.py  font_management.py  gallery.py  geocoding.py  rendering.py
src/maptoposter/: __init__.py  _util.py  batch.py  cli.py  core.py  font_management.py  gallery.py  geocoding.py  rendering.py
test/: all_variations.sh
tests/: conftest.py  test_batch.py  test_cli.py  test_core.py  test_font_management.py  test_gallery.py  test_integration.py  test_performance.py  test_theme_validation.py
