[project]
name = "maptoart"
version = "0.5.3"
description = "Generate beautiful, minimalist map posters for any city — batch processing, parallel rendering, 17 themes, SVG/PDF export."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Efren Rodriguez Rodriguez", email = "info@efrenrodriguezrodriguez.com"}
]
keywords = ["map", "poster", "osm", "openstreetmap", "art", "visualization", "batch", "gallery", "svg", "pdf", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

dependencies = [
    "geopandas>=1.0",
    "geopy>=2.4",
    "lat-lon-parser>=1.3",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "osmnx>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "shapely>=2.0",
    "tenacity>=8.2",
    "tqdm>=4.66",
]

[project.scripts]
maptoart-cli = "maptoart.cli:_entry"

[project.urls]
Homepage = "https://github.com/EfrenPy/maptoart"
Documentation = "https://github.com/EfrenPy/maptoart#readme"
Source = "https://github.com/EfrenPy/maptoart"
"Bug Tracker" = "https://github.com/EfrenPy/maptoart/issues"
Changelog = "https://github.com/EfrenPy/maptoart/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maptoart = ["themes/*.json", "fonts/*.ttf", "py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=maptoart --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
markers = ["integration: end-to-end tests with real rendering"]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
